--- a/index.html
+++ b/index.html
@@ -94,16 +94,16 @@
         .main-video-container {
             position: relative;
             width: 60%;
-            padding-top: 33.75%; /* 60% * 56.25% for 16:9 aspect ratio */
+            padding-top: 0;
+            height: auto;
             background-color: #000;
             border-radius: 8px;
             overflow: hidden;
+            aspect-ratio: 16 / 9;
         }
 
         #main-video-player {
-            position: absolute;
-            top: 0;
-            left: 0;
+            position: relative;
             width: 100%;
             height: 100%;
             border: none;
